builder-derive/tests/compile_fail/unit_struct_not_supported.rs
use builder_derive::Builder;

#[derive(Builder)]
struct UnitStruct;

fn main() {}
