builder-derive/tests/compile_fail/unit_struct_not_supported.stderr
error: Builder cannot be derived for unit structs
 --> tests/compile_fail/unit_struct_not_supported.rs:4:1
  |
4 | struct UnitStruct;
  | ^^^^^^^^^^^^^^^^^^
